# small_vec

./: Cargo.toml  LICENSE  README.md
src/: drop.rs  index.rs  lib.rs
